[gd_scene load_steps=11 format=3 uid="uid://0vtmvq323yaa"]

[ext_resource type="Script" uid="uid://wi1swe5lm66b" path="res://scripts/campfire.gd" id="1_54scn"]
[ext_resource type="Texture2D" uid="uid://cjbhmtubfxif5" path="res://art/characters/Feuer_animation3.png" id="1_m47ar"]
[ext_resource type="Theme" uid="uid://d2nqupvwy2or2" path="res://Themes/campfire.tres" id="3_yfrnb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_54scn"]
atlas = ExtResource("1_m47ar")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfrnb"]
atlas = ExtResource("1_m47ar")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pk5p"]
atlas = ExtResource("1_m47ar")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6xh0"]
atlas = ExtResource("1_m47ar")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1v5ef"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_54scn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfrnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pk5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6xh0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m47ar"]
radius = 5.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_54scn"]
radius = 16.0

[node name="campfire" type="CharacterBody2D"]
script = ExtResource("1_54scn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1v5ef")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_m47ar")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_54scn")

[node name="Save_game" type="Panel" parent="."]
custom_minimum_size = Vector2(140, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -72.0
offset_right = 70.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_yfrnb")

[node name="MarginContainer" type="MarginContainer" parent="Save_game"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -20.0
offset_right = 77.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Save_game/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Save your game? (Y)"

[node name="Game_loaded" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -78.0
offset_right = 50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_yfrnb")

[node name="MarginContainer" type="MarginContainer" parent="Game_loaded"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -20.0
offset_right = 77.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Game_loaded/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game loaded! "

[node name="Saved" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -71.0
offset_right = 50.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_yfrnb")

[node name="MarginContainer" type="MarginContainer" parent="Saved"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -20.0
offset_right = 77.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Saved/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game Saved!"

[node name="Timer_Game_loaded" type="Timer" parent="."]
wait_time = 2.0

[node name="Timer_Saved" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer_Game_loaded" to="." method="_on_timer_game_loaded_timeout"]
[connection signal="timeout" from="Timer_Saved" to="." method="_on_timer_saved_timeout"]
